# ReTauri

./: LICENSE  README.md  bun.lockb  package.json
ReTarui/: package.json
ReTarui/src-tauri/: Cargo.toml  tauri.conf.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: discordrpc.rs  main.rs
